--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,6 +13,7 @@
         }
         .navbar img { height: 50px; margin-right: 20px; }
         .navbar .menu { 
+            background: #1e8a3c;
             display: flex; 
             justify-content: space-around; /* cách đều nhau */
             flex: 1; 
@@ -137,8 +138,8 @@
         </a>
         <div class="menu">
             <a href="{{ url_for('dashboard') }}">Trang chủ</a>
-            <a href="#">Giới thiệu</a>
             <a href="#">Chức năng</a>
+            <a href="#">Giới thiệu</a>
             <a href="#">Liên hệ</a>
             <a href="#">Đánh giá chúng tôi</a>
         </div>
