--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -252,10 +252,10 @@
                 <i class="fa-solid fa-magnifying-glass text-3xl mb-3"></i>
                 <span class="font-semibold">Tìm kiếm sân bóng</span>
             </a>
-            <div class="frosted-glass p-6 rounded-2xl flex flex-col items-center hover:bg-white/30 transition cursor-pointer">
+            <a href="{{ url_for('find_team') }}" class="frosted-glass p-6 rounded-2xl flex flex-col items-center hover:bg-white/30 transition cursor-pointer">
                 <i class="fa-solid fa-user-plus text-3xl mb-3"></i>
                 <span class="font-semibold">Tuyển thành viên</span>
-            </div>
+            </a>
         </div>
     </header>
 
